objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>Channel Sales Process</fullName>
        <description>Opportunities through channel partners.</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Discovery</fullName>
        </values>
        <values>
            <fullName>Negotiation</fullName>
        </values>
        <values>
            <fullName>Proposal%2FQuote</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>MFG ETO</fullName>
        <description>Engineer to Order</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Engineering</fullName>
        </values>
        <values>
            <fullName>Pricing Review</fullName>
        </values>
        <values>
            <fullName>Proposal%2FQuote</fullName>
        </values>
        <values>
            <fullName>Qualification</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Simple Sales Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Discovery</fullName>
        </values>
        <values>
            <fullName>Negotiation</fullName>
        </values>
        <values>
            <fullName>Proposal%2FQuote</fullName>
        </values>
        <values>
            <fullName>Qualification</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Account_Region__c</fullName>
        <formula>TEXT(Account.Region__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Age__c</fullName>
        <formula>Today() - CreatedDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AutoNumber__c</fullName>
        <displayFormat>{0000}</displayFormat>
        <inlineHelpText>This is used in an equation to generate a random number</inlineHelpText>
        <label>AutoNumber</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Budget_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used for Sales Path</description>
        <label>Budget Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Capital_Equipment_Cost__c</fullName>
        <label>Capital Equipment Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Related Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CloseDate_TODAY__c</fullName>
        <formula>CloseDate - TODAY()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Closing Countdown</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Competition__c</fullName>
        <description>Used for deal registration.</description>
        <label>Competition</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Competitive_Coach__c</fullName>
        <formula>CASE( Competitor__c ,&quot;Competitor A&quot;,  HYPERLINK(&quot;/resource/1266967954000/Competitive_Product_Comparison&quot;, &quot;Competitor A Overview&quot; &amp; BR() &amp; &quot;Case Studies vs. Competitor A &quot; &amp; BR() &amp; &quot;Competitor A Comparison Matrix&quot; , &quot;_blank&quot;),&quot;Competitor B&quot;,HYPERLINK(&quot;/resource/1266967954000/Competitive_Product_Comparison&quot;, &quot;Competitor B Overview&quot; &amp; BR() &amp; &quot;Case Studies vs. Competitor B &quot; &amp; BR() &amp; &quot;Competitor B Comparison Matrix&quot; , &quot;_blank&quot;),&quot;Competitor C&quot;, HYPERLINK(&quot;/resource/1266967954000/Competitive_Product_Comparison&quot;, &quot;Competitor C Overview&quot; &amp; BR() &amp; &quot;Case Studies vs. Competitor C &quot; &amp; BR() &amp; &quot;Competitor C Comparison Matrix&quot; , &quot;_blank&quot;), null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Competitive Coach</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Competitive_Deal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Competitive Deal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Competitor__c</fullName>
        <label>Competitor</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Competitor A</fullName>
                </value>
                <value>
                    <fullName>Competitor B</fullName>
                </value>
                <value>
                    <fullName>Competitor C</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Complete_ROI_Analysis__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used for Sales Path</description>
        <label>Complete ROI Analysis</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_City__c</fullName>
        <label>Contact City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Company__c</fullName>
        <label>Contact Company</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Country__c</fullName>
        <label>Contact Country</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Email__c</fullName>
        <label>Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <label>Contact Name</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Phone__c</fullName>
        <label>Contact Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Contact_Postal_Code__c</fullName>
        <label>Contact Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_State_Province__c</fullName>
        <label>Contact State Province</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Street__c</fullName>
        <label>Contact Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Title__c</fullName>
        <label>Contact Title</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Terms__c</fullName>
        <description>Used for Sales Path</description>
        <label>Contract Terms</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>Non-Standard</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CreatedDate__c</fullName>
        <formula>CloseDate  -  Random_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DB_Amount__c</fullName>
        <label>DB Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DB_Days__c</fullName>
        <defaultValue>7</defaultValue>
        <description>This is used for the &quot;Perfect Data&quot; SE tool</description>
        <label>DB Days</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DateTimeCreated__c</fullName>
        <label>Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Days_Left_Until_Expire__c</fullName>
        <formula>if(ISNULL(Registration_Expiration__c),0, if(Registration_Expiration__c - TODAY() &gt;0, Registration_Expiration__c - TODAY(),0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Left Until Expire</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Deal_Approved_Date__c</fullName>
        <label>Deal Approved Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deal_Forward__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deal Forward</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Deal_ID__c</fullName>
        <description>Used for deal registrations</description>
        <label>Deal ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deal_Source__c</fullName>
        <description>Used for deal registration.</description>
        <label>Deal Source</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Decision_Role__c</fullName>
        <description>Used for deal registration.</description>
        <label>Decision Role</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Demo_Presentation_Date__c</fullName>
        <description>Used for Sales Path</description>
        <label>Demo Presentation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Discount_Approved__c</fullName>
        <label>Discount Approved</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Discount__c</fullName>
        <label>Discount %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Distributor__c</fullName>
        <description>Used for deal registration.</description>
        <label>Distributor</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ED_Close_Date_Delta__c</fullName>
        <formula>ED_Predicted_Close_Date__c - CloseDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is the number of days before or after the close date the opportunity is predicted to close.  It is calculated by subtracting the Close Date from the Predicted Close Date.</inlineHelpText>
        <label>ED Close Date Delta</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ED_Leading_Causes__c</fullName>
        <label>ED Leading Causes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>ED_Outcome__c</fullName>
        <inlineHelpText>This is the number of DAYS after the Created Date that this opportunity is targeted to close.</inlineHelpText>
        <label>ED Predicted Time to Close</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ED_Predicted_Close_Date__c</fullName>
        <formula>DateTimeCreated__c + ED_Outcome__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is calculated by adding the number of days in the &quot;ED Predicted Time to Close&quot; field to the CREATED DATE.</inlineHelpText>
        <label>ED Predicted Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ED_Prescription__c</fullName>
        <label>ED Prescription</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Engage_Legal__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used for Sales Path</description>
        <label>Engage Legal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Estimation_Status__c</fullName>
        <label>Estimation Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not started</fullName>
                    <default>true</default>
                    <label>Not started</label>
                </value>
                <value>
                    <fullName>In progress</fullName>
                </value>
                <value>
                    <fullName>On hold</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Estimator_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Estimator Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>EstimatorOpportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Estimator_Notes__c</fullName>
        <label>Estimator Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Estimator__c</fullName>
        <formula>IF( ISBLANK(Estimator_Name__c), &quot;Not assigned yet&quot;,  HYPERLINK(&quot;/&quot; +  Estimator_Name__r.Id , Estimator_Name__r.FirstName +&quot; &quot;+Estimator_Name__r.LastName))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Estimator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exec_Meeting__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box to change the results of Einstein Opportunity DIscovery.</inlineHelpText>
        <label>Executive Meeting</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Expected_Number_of_Units__c</fullName>
        <label>Expected Number of Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <description>This is used to consistently import data to a version of the SDO and translate data into other languages.</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Forwarded_Lead_ID__c</fullName>
        <description>The field is updated with a lead id when the opportunity details are forwarded to a partner as a lead.</description>
        <label>Forwarded Lead ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gross_Margin__c</fullName>
        <formula>(Amount -  Total_Cost__c) / Amount</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gross Margin</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Implementation_Start__c</fullName>
        <label>Implementation Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IndStatus__c</fullName>
        <formula>IMAGE( URLsrc__c&amp;&quot;/servlet/servlet.ImageServer?id=&quot;&amp;
IF(AND(Age__c &lt; 30, Not(IsClosed) ), &quot;015Hr000003iK9Z&amp;oid=&quot;&amp;$Organization.Id,
IF( AND(Age__c&lt;45, NOT(IsClosed)), &quot;015Hr000003iK9a&amp;oid=&quot;&amp;$Organization.Id, 
IF(AND(Age__c&gt;60, NOT(IsClosed)), &quot;015Hr000003iK9b&amp;oid=&quot;&amp;$Organization.Id,
IF(IsWon, &quot;015Hr000003iK9Z&amp;oid=&quot;&amp;$Organization.Id,
IF(NOT(IsWon), &quot;015Hr000003iK9Z&amp;oid=&quot;&amp;$Organization.Id,
&quot;015Hr000003iK9Z&amp;oid=&quot;&amp;$Organization.Id
))))),&quot;&quot;,22,22)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Dependent on Age field.  Good = Age &lt; 30 Days.  Warning = Age &lt; 45 Days. Poor = Age &gt; 60 Days.</inlineHelpText>
        <label>Age Indicator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Interactive_Demo__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box to change the results of Einstein Opportunity DIscovery</inlineHelpText>
        <label>Interactive Demo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Internal_Pricing_Approvals__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used for Sales Path</description>
        <label>Internal Pricing Approvals</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Intial_Estimated_Close_Date__c</fullName>
        <description>Used for deal registration.</description>
        <label>Initial Estimated Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Labor_Cost__c</fullName>
        <formula>Labor_Hours__c *   Labor_Rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Labor Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Labor_Hours__c</fullName>
        <label>Labor Hours</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Labor_Rate__c</fullName>
        <label>Labor Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LastActivityDate__c</fullName>
        <label>Last Activity</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LastModifiedDate__c</fullName>
        <label>Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>MFG_ALL_Expected_Margin__c</fullName>
        <label>Expected Margin</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MFG_ALL_Opty_Quip_URL__c</fullName>
        <description>Used for Opportunity Quip link</description>
        <label>MFG Opty Quip URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>MFG_ALL_RFQ_Expected_Date__c</fullName>
        <label>RFQ Expected Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MFG_ALL_RFQ_Received_Date__c</fullName>
        <label>RFQ Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MFG_IDO_Asset__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Asset</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MFG_Key_Record__c</fullName>
        <defaultValue>true</defaultValue>
        <label>MFG Key Record</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MFG_Production_Start_date__c</fullName>
        <label>Production Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MFG_Quote_Due_Date__c</fullName>
        <label>Quote Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Margin__c</fullName>
        <label>Margin</label>
        <precision>11</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Materials_Cost__c</fullName>
        <label>Materials Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Overhead_Rate__c</fullName>
        <label>Overhead Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Partner_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used for the &quot;Partner Opportunities&quot; related list on Partner Account records.</description>
        <label>Partner Owner</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Partner Opportunities</relationshipLabel>
        <relationshipName>PartnerOpportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Plant_Location__c</fullName>
        <label>Plant Location</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Grand Rapids, MI</fullName>
                </value>
                <value>
                    <fullName>Appleton, WI</fullName>
                </value>
                <value>
                    <fullName>Suwanee, GA</fullName>
                </value>
                <value>
                    <fullName>Eugene, OR</fullName>
                </value>
                <value>
                    <fullName>San Antonio, TX</fullName>
                </value>
                <value>
                    <fullName>Plant City, FL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pricing_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pricing Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Primary_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities (Primary Contact)</relationshipLabel>
        <relationshipName>Opportunities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Production_End_Date__c</fullName>
        <label>Production End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Production_Hours__c</fullName>
        <label>Production Hours</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Products__c</fullName>
        <label>Product</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>GC1000 series</fullName>
                </value>
                <value>
                    <fullName>GC5000 series</fullName>
                </value>
                <value>
                    <fullName>GC10001</fullName>
                </value>
                <value>
                    <fullName>GC20002</fullName>
                </value>
                <value>
                    <fullName>GC50000</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project_Budget__c</fullName>
        <description>Used for deal registration.</description>
        <label>Project Budget</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Project_Budgeted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used for deal registration.</description>
        <label>Project Budgeted?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Project_Description__c</fullName>
        <label>Project Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Project_Manager_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used for Sales Path</description>
        <label>Project Manager Contact</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Name__c</fullName>
        <label>Project Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Projected_Durations__c</fullName>
        <formula>Round(Projected_Finish__c - Implementation_Start__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Projected Durations</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Projected_Finish__c</fullName>
        <label>Projected Finish</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Push_Counter__c</fullName>
        <description>This field tracks many times an Opportunity has been pushed from month to month</description>
        <inlineHelpText>This field tracks many times an Opportunity has been pushed from month to month</inlineHelpText>
        <label>Push Counter</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Random_Number__c</fullName>
        <formula>1 + MOD( VALUE(AutoNumber__c) * 12345678 , 10000)/100</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Random Number</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reason_Lost__c</fullName>
        <label>Reason Lost</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Price</fullName>
                </value>
                <value>
                    <fullName>Product Issues</fullName>
                </value>
                <value>
                    <fullName>Relationship</fullName>
                </value>
                <value>
                    <fullName>No Decision</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rebate_Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Rebate Program</label>
        <referenceTo>RebateProgram</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Registration_Expiration__c</fullName>
        <description>Date the deal registration expires</description>
        <label>Registration Expiration</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SBQQ__AmendedContract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Indicates the relationship to your Amended Contract.</description>
        <inlineHelpText>Lookup to your Amended Contract.</inlineHelpText>
        <label>Amended Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Amendment Opportunities</relationshipLabel>
        <relationshipName>AmendmentOpportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__Contracted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Internal flag used to kick off automatic asset and subscription conversion.</description>
        <inlineHelpText>SteelBrick CPQ uses this field to automatically convert assets and subscriptions.</inlineHelpText>
        <label>Contracted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__CreateContractedPrices__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Select this checkbox to create Contracted Prices without creating a Contract.</description>
        <inlineHelpText>Select this checkbox to create Contracted Prices without creating a Contract.</inlineHelpText>
        <label>Create Contracted Prices</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__OrderGroupID__c</fullName>
        <description>The unique identifier for the Amend:Re-Quote transaction, which is the original primary quote&apos;s ID. This is not a reference.</description>
        <inlineHelpText>The unique identifier for the Amend:Re-Quote transaction, which is the original primary quote&apos;s ID.</inlineHelpText>
        <label>Order Group ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__Ordered__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Internal flag that drives automatic order creation.</description>
        <inlineHelpText>Select this checkbox to automatically create an order from the primary quote.</inlineHelpText>
        <label>Ordered</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__PrimaryQuote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Points to primary quote on this opportunity.</description>
        <inlineHelpText>SteelBrick CPQ uses this to point to the primary quote on this opportunity.</inlineHelpText>
        <label>Primary Quote</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Id</field>
                <operation>equals</operation>
                <valueField>SBQQ__Quote__c.SBQQ__Opportunity2__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>SBQQ__Quote__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>PrimaryOpportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__QuotePricebookId__c</fullName>
        <description>Custom pricebook ID field that updates the standard Pricebook2Id field. Use to automatically drive pricebook selection from workflow rules.</description>
        <label>Quote Pricebook Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__Renewal__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates this opportunity is a renewal opportunity.</description>
        <inlineHelpText>Indicates this opportunity is a renewal opportunity.</inlineHelpText>
        <label>Renewal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__RenewedContract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Contract being renewed by this renewal opportunity. In case opportunity rolls up several contracts this points at the master contract.</description>
        <inlineHelpText>Contract being renewed by this renewal opportunity. If the several contracts roll up to this opportunity, this points at the master contract.</inlineHelpText>
        <label>Renewed Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Renewal Opportunities</relationshipLabel>
        <relationshipName>RenewalOpportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Stalled_Opportunity__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Stalled Opportunity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status_Value__c</fullName>
        <formula>IF( CloseDate_TODAY__c &gt;0, &quot;good&quot;, &quot;bad&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status Value</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tooling_Cost__c</fullName>
        <label>Tooling Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Cost__c</fullName>
        <formula>Tooling_Cost__c +  Materials_Cost__c + Capital_Equipment_Cost__c + Labor_Cost__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>URLsrc__c</fullName>
        <formula>IF(CONTAINS($Api.Enterprise_Server_URL_290,&quot;.force.com&quot;), 
MID( $Api.Enterprise_Server_URL_290, FIND(&quot;/&quot;, $Api.Enterprise_Server_URL_290, FIND(&quot;.force.com/&quot;, $Api.Enterprise_Server_URL_290, 0)), 
FIND(&quot;/&quot;, $Api.Enterprise_Server_URL_290, FIND(&quot;/&quot;, $Api.Enterprise_Server_URL_290, FIND(&quot;.force.com/&quot;, $Api.Enterprise_Server_URL_290, 0))+1) - FIND(&quot;/&quot;, $Api.Enterprise_Server_URL_290, FIND(&quot;.force.com/&quot;, $Api.Enterprise_Server_URL_290, 0)) 
) , &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>URLsrc</label>
        <type>Text</type>
    </fields>
</CustomObject>